--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Portfolio"
+title: "기록용"
 email: 'bjhsh12@gmail.com'
-description: "I'm a software developer and designer from Chicago creating useful things for the web."
+description: "공부용 블로그"
 baseurl: "https://backjunghee.github.io/" # the subpath of your site, e.g. /blog
 url: "https://backjunghee.github.io/" # the base hostname & protocol for your site, e.g. https://example.com
 twitter_username: ''
