--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,12 @@ markdown: kramdown
 # theme: phantom # Uncomment once published to RubyGems
 plugins:
   - jekyll-paginate-v2
-
+  - ekyll-github-metadata
+# jekyll-github-metadata 설정
+github:
+  username: BackJunghee # GitHub 사용자 이름 설정
+  repository: golang_study
+  
 ############################################################
 # Site configuration for the Jekyll 3 Pagination Gem
 # The values here represent the defaults if nothing is set
